# myCodespaces

./: README.md
myenv_toml/: pyproject.toml
sparkenv_jki_23/: JKI_S4_C23.knwf  data_clean.ipynb  data_clean_dask.ipynb  readme.md
stockout_jki_s4-13/: dataprep.ipynb  pyproject.toml  stockout_data.xlsx
