[tool.poetry]
package-mode = false
name = "myenvtoml"
version = "0.1.0"
description = "Lists of packages and dependencies for myenv in vscodespaces"
authors = ["Nilotpal Choudhury <63115134+nilotpalc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
