[tool.poetry]
name = "ts-env"
version = "0.1.0"
description = "Installing packages for prophet and neuralprophet timeseries forecasting and analysis"
authors = ["Nilotpal Choudhury <choudhury.nilotpal@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
prophet = "^1.1.5"
neuralprophet = "^0.9.0"
numpy = ">=1.25.0"
pandas = ">=2.2.2"
scipy = ">=1.14.0"
scikit-learn = ">=1.5.1"
matplotlib = ">=3.9.1"
seaborn = ">=0.13.2"
pyodbc = ">=5.1.0"
duckdb = ">=1.0.0"
py4j = ">=0.10.9.7"
pyarrow = ">=16.1.0"
beautifulsoup4 = ">=4.12.3"
pulp = ">=2.9.0"
pmdarima = ">=2.0.4"
ipykernel = ">=6.29.5"
plotly = ">=5.22.0"
pip = ">=24.1.2"
torch = "^2.4.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
